--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Xandr215's Site</title>
+  </head>
+  <body>
+      <h1>Hello, world!</h1>
+  </body>
+</html>
