--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title>Xandr215's Site</title>
   </head>
   <body>
-      <h1>Hello, world!</h1>
+    <h1>Hello, world!</h1>
+    <h2>This is Xandr215's GitHub Pages site.</h2>
+    <p>Feel free to visit the other pages here.</p>
+    <a href="internet-relay-chat.html">Go to the embedded IRC pages</a>
+    <a href="insecurly.html">Go to the Insecurly exploit page</a>
   </body>
 </html>
