--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script>
-var baseUrl = "index.php"
+var baseUrl = "https://xandr215.github.io/index.php"
 window.location.href = baseUrl
   </script>
 </html>
