--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html>
   <head>
     <title>Xandr215's Site</title>
+    <style>
+      h1 {
+      font-family: verdana;
+      }
+      body {
+      font-family: verdana;
+      }
+      footer {
+      font-family: verdana;
+      }
+    </style>
   </head>
   <body>
     <h1>Hello, world!</h1>
