--- a/irc.html
+++ b/irc.html
@@ -2,6 +2,18 @@
 <html>
 <head>
 <title>IRC-HTML</title>
+    <style>
+      body {
+      font-family: verdana;
+      }
+    </style>
+      body {
+      font-family: verdana;
+      }
+      footer {
+      font-family: verdana;
+      }
+    </style>
 </head>
 <body>
 <p>IRC in a HTML document</p>
