--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
     <p>Feel free to visit the other pages here.</p>
     <a href="irc.html">Go to the embedded IRC pages</a>
     <a href="insecurly.html">Go to the Insecurly exploit page</a>
+  <br>
   </body>
   <foooter>
-    Resources and interesting pages:<br><a href="kiwiirc.com/nextclient">Kiwi IRC</a>
+    Resources and interesting pages:
+    <br>
+    <a href="kiwiirc.com/nextclient">Kiwi IRC</a>
   </foooter>
 </html>
