--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     </style>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <h2>This is Xandr215's GitHub Pages site.</h2>
-    <p>Feel free to visit the other pages here.</p>
-    <a href="irc.html">Go to the embedded IRC pages</a>
-    <a href="insecurly.html">Go to the Insecurly exploit page</a>
+    <h1 style="font-family: verdana;">Hello, world!</h1>
+    <h2 style="font-family: verdana;">This is Xandr215's GitHub Pages site.</h2>
+    <p style="font-family: verdana;">Feel free to visit the other pages here.</p>
+    <a href="irc.html" style="font-family: verdana;">Go to the embedded IRC pages</a>
+    <a href="insecurly.html" style="font-family: verdana;">Go to the Insecurly exploit page</a>
   <br>
   </body>
-  <foooter>
+  <footer>
     Resources and interesting pages:
     <br>
-    <a href="kiwiirc.com/nextclient">Kiwi IRC</a>
-  </foooter>
+    <a href="kiwiirc.com/nextclient" style="font-family: verdana;">Kiwi IRC</a>
+  </footer>
 </html>
