--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
   <footer>
     Resources and interesting pages:
     <br>
-    <a href="kiwiirc.com/nextclient" style="font-family: verdana;">Kiwi IRC</a>
+    <a href="https://www.kiwiirc.com/nextclient" style="font-family: verdana;">Kiwi IRC</a>
   </footer>
 </html>
