--- a/irc.html
+++ b/irc.html
@@ -17,5 +17,6 @@
 </head>
 <body>
 <p>IRC in a HTML document</p>
-<iframe src="https://webchat.oftc.net/?uio=OT10cnVlJjExPTI1Ng31" width="647" height="400"></iframe>
+    <iframe src="https://webchat.oftc.net/?uio=OT10cnVlJjExPTI1Ng31" width="640" height="480"></iframe>
+    <iframe src="https://www.kiwiirc.com/nextclient" width="640" height="480"></iframe>
 </html>
