--- a/irc.html
+++ b/irc.html
@@ -7,16 +7,10 @@
       font-family: verdana;
       }
     </style>
-      body {
-      font-family: verdana;
-      }
-      footer {
-      font-family: verdana;
-      }
-    </style>
 </head>
 <body>
 <p>IRC in a HTML document</p>
-    <iframe src="https://webchat.oftc.net/?uio=OT10cnVlJjExPTI1Ng31" width="640" height="480"></iframe>
-    <iframe src="https://www.kiwiirc.com/nextclient" width="640" height="480"></iframe>
+    <iframe src="https://webchat.oftc.net/" width="854" height="480"></iframe>
+    <br>
+    <iframe src="https://www.kiwiirc.com/nextclient" width="854" height="480"></iframe>
 </html>
