--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1 style="font-family: verdana;">Hello, world!</h1>
     <h2 style="font-family: verdana;">This is Xandr215's GitHub Pages site.</h2>
     <p style="font-family: verdana;">Feel free to visit the other pages here.</p>
-    <a href="irc.html" style="font-family: verdana;">Go to the embedded IRC pages</a>
+    <a href="https://xandr215.github.io/irc" style="font-family: verdana;">Go to the embedded IRC pages</a>
   <br>
   </body>
 </html>
