--- a/irc/index.html
+++ b/irc/index.html
@@ -9,8 +9,6 @@
     </style>
 </head>
 <body>
-<p>IRC in a HTML document</p>
-    <iframe src="https://webchat.oftc.net/" width="854" height="480"></iframe>
-    <br>
-    <iframe src="https://www.kiwiirc.com/nextclient" width="854" height="480"></iframe>
+<p>Embedded IRC. I'll add more later tbh.</p>
+    <iframe src="https://webchat.oftc.net/" width="1280" height="720"></iframe>
 </html>
