--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       }
       body {
       font-family: verdana;
+      background-color: 555555;
       }
       footer {
       font-family: verdana;
