--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Xandr215's Site</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://xandr215.github.io/images/favicon.ico">
     <style>
       h1 {
       font-family: verdana;
