--- a/irc/index.html
+++ b/irc/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>IRC-HTML</title>
+    <link rel="icon" type="image/x-icon" href="https://xandr215.github.io/images/favicon.ico">
     <style>
       body {
       font-family: verdana;
