--- a/newindex.html
+++ b/newindex.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Xandr215's Site</title>
+    <link rel="icon" type="image/x-icon" href="https://xandr215.github.io/images/favicon.ico">
 <style>
 body {
   margin: 0;
@@ -41,10 +43,11 @@ body {
   <a href="https://xandr215.github.io/irc">IRC</a>
 </div>
 
-<div style="padding-left:16px">
-  <h2>Top Navigation Example</h2>
-  <p>Some content..</p>
-</div>
+  <body>
+    <h1 style="font-family: verdana;">Hello, world!</h1>
+    <h2 style="font-family: verdana;">This is Xandr215's GitHub Pages site.</h2>
+    <p style="font-family: verdana;">Feel free to visit the other pages here.</p>
+  <br>
 
 </body>
 </html>
