--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Xandr215's Site</title>
-    <link rel="icon" type="image/x-icon" href="https://xandr215.github.io/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 <style>
 body {
   margin: 0;
@@ -38,8 +38,7 @@ body {
 <body>
 
 <div class="topnav">
-  <a href="#contact">Contact</a>
-  <a href="https://xandr215.github.io/irc">IRC</a>
+  <a href="irc">IRC</a>
 </div>
 
   <body>
