made from vscode!

--- a/contact/index.html
+++ b/contact/index.html
@@ -39,13 +39,13 @@ body {
 
 <div class="topnav">
   <a href="irc">IRC</a>
-  <a href="contact">Contact me!</a>
+  <a href="xandr215.github.io">Back to home</a>
 </div>
 
   <body>
-    <h1 style="font-family: verdana;">Hello, world!</h1>
-    <h2 style="font-family: verdana;">This is Xandr215's GitHub Pages site.</h2>
-    <p style="font-family: verdana;">Feel free to visit the other pages here.</p>
+    <h1 style="font-family: verdana;">Hello!</h1>
+    <h2 style="font-family: verdana;">Here's some contact info for me.</h2>
+    <p style="font-family: verdana;">jk lol</p>
   <br>
 
 </body>
