--- a/games/snake/snake.html
+++ b/games/snake/snake.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Snake - Xandr215's Games</title>
+    <link rel="stylesheet" href="snake.css">
   </head>
   <body>
     <h1>Snake - Xandr215's Games</h1>
