--- a/e-xfun/thing.html
+++ b/e-xfun/thing.html
@@ -2,10 +2,9 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="https://raw.githubusercontent.com/zek-c/Securly-Kill-V111/main/IMG/insecurly%20icon.png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Securly Killer</title>
+    <title>E-X.fun Thing</title>
     <style>
         #error {
             display: none;
@@ -2352,7 +2351,7 @@
 </head>
 
 <body>
-    <h1>Kill Exploit (by Hackers-X)</h1>
+    <h1>some funny thing lol</h1>
     <div id="error"></div>
     <div id="draggable" draggable="true">drag this button into a new tab!</div>
 </body>
