--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body {
 <div class="topnav">
   <a href="irc">IRC</a>
   <a href="contact">Contact me!</a>
-  <a href="e-xfun/calc.html>E-X.fun Calculator v0.0.1</a>
+  <a href="games">Games</a>
 </div>
 
   <body>
