--- a/games/index.html
+++ b/games/index.html
@@ -8,7 +8,7 @@
     <h2>Made by Xandr215 and others.</h2>
     <p>List of games!</p>
     <li>
-      <ul>Snake</ul>
+      <ul><a href="edgesurf">Edge Surf Game that actually works offline!</a></ul>
     </li>
   </body>
 </html>
