--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ body {
 <body>
 
 <div class="topnav">
-  <a href="irc">IRC</a>
-  <a href="contact">Contact me!</a>
+  <a href="irc.html">IRC</a>
+  <a href="contact.html">Contact me!</a>
   <a href="games">Games</a>
 </div>
 
