--- a/games/index.html
+++ b/games/index.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Xandr215's Games</title>
-  </head>
-  <body>
+<body>
     <h1>Xandr215's Games</h1>
     <h2>Made by Xandr215 and others.</h2>
     <p>List of games!</p>
@@ -11,4 +6,58 @@
       <ul><a href="edgesurf">Edge Surf Game that actually works offline!</a></ul>
     </li>
   </body>
+</html>
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Xandr215's Games</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+</style>
+</head>
+<body>
+
+<div class="topnav">
+  <a href="xandr215.github.io">Back home</a>
+  <a href="edgesurf">MS Edge Surf</a>
+  <a href="guessnum.html">Guess the Number</a>
+  <a href="flappybird.html">Simple Flappy Bird</a>
+</div>
+
+  <body>
+    <h1 style="font-family: verdana;">Hello, world!</h1>
+    <h2 style="font-family: verdana;">This is Xandr215's GitHub Pages games.</h2>
+    <p style="font-family: verdana;">Feel free to play the games here.</p>
+  <br>
+
+</body>
 </html>
