--- a/utilities/index.html
+++ b/utilities/index.html
@@ -1,4 +1,53 @@
 <!DOCTYPE html>
 <html>
-  <h1>replace this</h1>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Xandr215's Utilities</title>
+    <link rel="icon" type="image/x-icon" href="https://xandr215.github.io/images/favicon.ico">
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+</style>
+</head>
+<body>
+
+<div class="topnav">
+  <a href="https://xandr215.github.io">Back home</a>
+  <a href="primecheck">Prime Number Checker</a>
+  <a href="https://replit.com/@zspocter15/ChatGenie">ChatGenie on Replit</a>
+</div>
+
+  <body>
+    <h1 style="font-family: verdana;">Hello, world!</h1>
+    <h2 style="font-family: verdana;">This is Xandr215's GitHub Pages utilities.</h2>
+    <p style="font-family: verdana;">Feel free to use the utilities here.</p>
+  <br>
+
+</body>
 </html>
