--- a/games/index.html
+++ b/games/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Xandr215's Games</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://xandr215.github.io/images/favicon.ico">
 <style>
 body {
   margin: 0;
@@ -38,7 +38,7 @@ body {
 <body>
 
 <div class="topnav">
-  <a href="xandr215.github.io">Back home</a>
+  <a href="https://xandr215.github.io">Back home</a>
   <a href="edgesurf">MS Edge Surf</a>
   <a href="guessnum.html">Guess the Number</a>
   <a href="flappybird.html">Simple Flappy Bird</a>
