--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ body {
   <a href="irc.html">IRC</a>
   <a href="contact.html">Contact me!</a>
   <a href="games">Games</a>
+  <a href="utilities">Utilities</a>
 </div>
 
   <body>
