--- a/utilities/index.html
+++ b/utilities/index.html
@@ -40,7 +40,7 @@ body {
 <div class="topnav">
   <a href="https://xandr215.github.io">Back home</a>
   <a href="primecheck">Prime Number Checker</a>
-  <a href="https://replit.com/@zspocter15/ChatGenie">ChatGenie on Replit</a>
+  <a href="https://replit.com/@zspocter15/ChatGenie">ChatGenie on Replit (not mine!)</a>
 </div>
 
   <body>
