--- a/games/index.html
+++ b/games/index.html
@@ -39,7 +39,7 @@ body {
 
 <div class="topnav">
   <a href="https://xandr215.github.io">Back home</a>
-  <a href="edgesurf">MS Edge Surf</a>
+  <a href="edgesurf">MS Edge Surf Port (not mine!)</a>
   <a href="guessnum.html">Guess the Number</a>
   <a href="flappybird.html">Simple Flappy Bird</a>
 </div>
