--- a/games/edgesurf/index.html
+++ b/games/edgesurf/index.html
@@ -4,7 +4,7 @@
 
 <!DOCTYPE html>
 <!-- saved from url=edge://surf/ -->
-<html dir="ltr" lang="en">
+<html dir="ltr" lang="en" manifest="surf.appcache">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
