--- a/games/index.html
+++ b/games/index.html
@@ -41,7 +41,7 @@ body {
   <a href="https://xandr215.github.io">Back home</a>
   <a href="edgesurf">MS Edge Surf Port (not mine!)</a>
   <a href="guessnum.html">Guess the Number</a>
-  <a href="flappybird.html">Simple Flappy Bird</a>
+  <a href="rps.html">Rock Paper Scissors</a>
 </div>
 
   <body>
