--- a/games/rps.html
+++ b/games/rps.html
@@ -31,11 +31,11 @@
     }
 
     #paper {
-      background-color: #fff;
+      background-color: #f0f0f0;
     }
 
     #scissors {
-      background-color: #eee;
+      background-color: #f0f0f0;
     }
 
     #result {
