--- a/games/rps.html
+++ b/games/rps.html
@@ -53,9 +53,39 @@
       font-size: 20px;
       color: #333;
     }
-  </style>
+
+    .topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+</style>
 </head>
 <body>
+<div class="topnav">
+  <a href="https://xandr215.github.io">Back home</a>
+  <a href="https://xandr215.github.io/games">Back to games</a>
+  <a href="edgesurf">MS Edge Surf Port (not mine!)</a>
+  <a href="guessnum.html">Guess the Number</a>
+</div>
   <h1>Rock Paper Scissors</h1>
   <p>Choose one of the options and try to beat the computer.</p>
   <p>Rock beats scissors, scissors beats paper, and paper beats rock.</p>
