--- a/games/guessnum.html
+++ b/games/guessnum.html
@@ -8,9 +8,39 @@
     body {
       font-family: Arial, sans-serif;
     }
-  </style>
+    .topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+</style>
 </head>
 <body>
+
+<div class="topnav">
+  <a href="https://xandr215.github.io">Back home</a>
+  <a href="edgesurf">MS Edge Surf Port (not mine!)</a>
+  <a href="guessnum.html">Guess the Number</a>
+  <a href="rps.html">Rock Paper Scissors</a>
+</div>
   <h1>Guess the Number Game</h1>
   <label for="min">Min:</label>
   <input type="number" id="min" value="0">
