--- a/games/guessnum.html
+++ b/games/guessnum.html
@@ -37,8 +37,8 @@
 
 <div class="topnav">
   <a href="https://xandr215.github.io">Back home</a>
+  <a href="https://xandr215.github.io/games">Back to games</a>
   <a href="edgesurf">MS Edge Surf Port (not mine!)</a>
-  <a href="guessnum.html">Guess the Number</a>
   <a href="rps.html">Rock Paper Scissors</a>
 </div>
   <h1>Guess the Number Game</h1>
