--- a/utilities/index.html
+++ b/utilities/index.html
@@ -39,7 +39,7 @@ body {
 
 <div class="topnav">
   <a href="https://xandr215.github.io">Back home</a>
-  <a href="primecheck">Prime Number Checker</a>
+  <a href="numtools.html">NumberTools</a>
   <a href="https://replit.com/@zspocter15/ChatGenie">ChatGenie on Replit (not mine!)</a>
 </div>
 
