--- a/utilities/numtools.html
+++ b/utilities/numtools.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Random Number Generator and Prime Number Checker</title>
+  <title>NumberTools</title>
   <script>
     // Define a function to generate a random number
     function random_number_generator() {
@@ -72,7 +72,7 @@
   </script>
 </head>
 <body>
-  <h1>Random Number Generator and Prime Number Checker</h1>
+  <h1>NumberTools</h1>
   <p>Enter the range for the random number:</p>
   <input type="number" id="lower" placeholder="Lower bound">
   <input type="number" id="upper" placeholder="Upper bound">
