--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="site.appcache">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Xandr215's Site</title>
