--- a/utilities/index.html
+++ b/utilities/index.html
@@ -41,6 +41,7 @@ body {
   <a href="https://xandr215.github.io">Back home</a>
   <a href="numtools.html">NumberTools</a>
   <a href="https://replit.com/@zspocter15/ChatGenie">ChatGenie on Replit (not mine!)</a>
+  <a href="chatcrawl">ChatCrawl</a>
 </div>
 
   <body>
