updates updates updates

--- a/irc.html
+++ b/irc.html
@@ -11,5 +11,5 @@
 </head>
 <body>
 <p>Embedded IRC. I'll add more later tbh.</p>
-    <iframe src="https://webchat.oftc.net/" width="1280" height="720"></iframe>
+    <iframe src="https://webchat.oftc.net/" width=window.innerWidth height=window.innerHeight></iframe>
 </html>
