--- a/utilities/index.html
+++ b/utilities/index.html
@@ -40,8 +40,9 @@ body {
 <div class="topnav">
   <a href="https://xandr215.github.io">Back home</a>
   <a href="numtools.html">NumberTools</a>
-  <a href="https://replit.com/@zspocter15/ChatGenie">ChatGenie on Replit (not mine!)</a>
+  <a href="chatgenie">ChatGenie (not mine!)</a>
   <a href="chatcrawl">ChatCrawl</a>
+  <a href="partialcalc.html">PartialCalc (not mine!)</a>
 </div>
 
   <body>
