i like em thicc i like em chunky

--- a/irc.html
+++ b/irc.html
@@ -11,5 +11,5 @@
 </head>
 <body>
 <p>Embedded IRC. I'll add more later tbh.</p>
-    <iframe src="https://webchat.oftc.net/" width=window.innerWidth height=window.innerHeight></iframe>
+<iframe width="550" height="350" scrolling="no" src="https://widget.mibbit.com/?settings=5ddda0fef14d34db9b50a68b11dc4baf&server=irc.mibbit.net%3A%2B6697&channel=%23xandr215"></iframe>
 </html>
