--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Xandr215's Site</title>
+    <title>Xandr215's Contact Info</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 <style>
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, Verdana;
 }
 
 .topnav {
@@ -38,15 +38,13 @@ body {
 <body>
 
 <div class="topnav">
-  <a href="irc">IRC</a>
-  <a href="xandr215.github.io">Back to home</a>
+  <a href="https://xandr215.github.io">Back to home</a>
 </div>
 
   <body>
-    <h1 style="font-family: verdana;">Hello!</h1>
-    <h2 style="font-family: verdana;">Here's some contact info for me.</h2>
-    <p style="font-family: verdana;">jk lol</p>
-  <br>
-
+    <h1>Hello, world!</h1>
+    <h2>Here's some contact info for me.</h2>
+    <p><a href="mailto:xpb1@duck.com">Email: xpb1@duck.com</a></p>
+    <p>Phone Number: (555) 789-0123<br>This is a fake number</p>
 </body>
 </html>
