--- a/utilities/chat.html
+++ b/utilities/chat.html
@@ -7,9 +7,40 @@
       body {
       font-family: verdana;
       }
-    </style>
+        
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+</style>
 </head>
 <body>
+<div class="topnav">
+  <a href="https://xandr215.github.io">Back home</a>
+  <a href="numtools.html">NumberTools</a>
+  <a href="chatgenie">ChatGenie (not mine!)</a>
+  <a href="chatcrawl">ChatCrawl</a>
+  <a href="partialcalc.html">PartialCalc (not mine!)</a>
+</div>
 <p>Embedded IRC. I'll add more later tbh.</p>
 <iframe width="550" height="350" scrolling="no" src="https://widget.mibbit.com/?settings=5ddda0fef14d34db9b50a68b11dc4baf&server=irc.mibbit.net%3A%2B6697&channel=%23xandr215"></iframe>
 </html>
