--- a/games/edgesurf/index.html
+++ b/games/edgesurf/index.html
@@ -33,6 +33,7 @@
     <script src="resources/js/util.js"></script>
     <script src="resources/js/strings.js"></script>
     <link href="resources/css/interface.css" rel="stylesheet" media="all"/>
+   <title>Edge Surf Offline</title>
   </head>
     <body>
         <div id="hamburger-container"></div>
