--- a/corgi/index.html
+++ b/corgi/index.html
@@ -3,14 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Cute Corgi</title>
+    <title>Cora's Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Meet My Cute Little Corgi!</h1>
-        <div id="ageCounter"></div>
-    </div>
+    <header id="topSection">
+        <h1>Welcome to Cora's Page</h1>
+        <img src="cora_main.jpg" alt="Cora Main Image">
+    </header>
+
+    <section id="middleSection">
+        <h2>About Cora</h2>
+        <img src="cora_about.jpg" alt="Cora About Image">
+        <p>Cora is a lovely tri-color corgi who loves to play, cuddle, and explore the outdoors. She brings joy to everyone she meets with her playful antics and adorable smile.</p>
+    </section>
+
+    <section id="bottomSection">
+        <h2>Gallery</h2>
+        <div class="imageGallery">
+            <img src="cora_gallery1.jpg" alt="Cora Gallery Image 1">
+            <img src="cora_gallery2.jpg" alt="Cora Gallery Image 2">
+            <img src="cora_gallery3.jpg" alt="Cora Gallery Image 3">
+        </div>
+    </section>
+
+    <footer>
+        <p>Cora's Page - Xandr215's Site</p>
+        <div class="footerIcons">
+            <a href="https://github.com/Xandr215"><img src="github_icon.png" alt="GitHub"></a>
+            <a href="https://xandr215.github.io" class="mainSiteLink">
+                <img src="favicon-grey.ico" alt="Main Site Grey" class="greyLogo">
+                <img src="favicon.ico" alt="Main Site" class="colorLogo">
+            </a>
+            <a href="https://x215.w3spaces.com" class="w3spacesLink">
+                <img src="w3spaces-grey.png" alt="W3Spaces Grey" class="greyLogo">
+                <img src="w3spaces-green.png" alt="W3Spaces Green" class="colorLogo">
+            </a>
+        </div>
+    </footer>
 
     <audio id="partyHorn">
         <source src="party_horn.mp3" type="audio/mpeg">
