--- a/corgi/index.html
+++ b/corgi/index.html
@@ -30,7 +30,10 @@
     <footer>
         <p>Cora's Page - Xandr215's Site</p>
         <div class="footerIcons">
-            <a href="https://github.com/Xandr215"><img src="github_icon.png" alt="GitHub"></a>
+            <a href="https://github.com/Xandr215" class="githubLink">
+                <img src="github_icon_grey.png" alt="GitHub Grey" class="greyLogo">
+                <img src="github_icon_black.png" alt="GitHub Black" class="colorLogo">
+            </a>
             <a href="https://xandr215.github.io" class="mainSiteLink">
                 <img src="favicon-grey.ico" alt="Main Site Grey" class="greyLogo">
                 <img src="favicon.ico" alt="Main Site" class="colorLogo">
