--- a/corgi/index.html
+++ b/corgi/index.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cora's Page</title>
+    <title>Cora the Corgi</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header id="topSection">
-        <h1>Welcome to Cora's Page</h1>
-        <img src="cora_main.jpg" alt="Cora Main Image">
+        <h1>Welcome to Cora the Corgi's Page!</h1>
+        <img src="images/cora_main.png" alt="Cora the Corgi - Main Image">
     </header>
 
     <section id="middleSection">
         <h2>About Cora</h2>
-        <img src="cora_about.jpg" alt="Cora About Image">
+        <img src="images/cora_about.png" alt="Cora the Corgi - About Image">
         <p>Cora is a lovely tri-color corgi who loves to play, cuddle, and explore the outdoors. She brings joy to everyone she meets with her playful antics and adorable smile.</p>
     </section>
 
     <section id="bottomSection">
         <h2>Gallery</h2>
         <div class="imageGallery">
-            <img src="cora_gallery1.jpg" alt="Cora Gallery Image 1">
-            <img src="cora_gallery2.jpg" alt="Cora Gallery Image 2">
-            <img src="cora_gallery3.jpg" alt="Cora Gallery Image 3">
+            <img src="images/cora_gallery1.png" alt="Cora the Corgi - Gallery Image 1">
+            <img src="images/cora_gallery2.png" alt="Cora the Corgi - Gallery Image 2">
+            <img src="images/cora_gallery3.png" alt="Cora the Corgi - Gallery Image 3">
         </div>
     </section>
 
@@ -31,16 +31,16 @@
         <p>Cora's Page - Xandr215's Site</p>
         <div class="footerIcons">
             <a href="https://github.com/Xandr215" class="githubLink">
-                <img src="github_icon_grey.png" alt="GitHub Grey" class="greyLogo">
-                <img src="github_icon_black.png" alt="GitHub Black" class="colorLogo">
+                <img src="images/github-grey.png" alt="GitHub Grey" class="greyLogo">
+                <img src="images/github.png" alt="GitHub" class="colorLogo">
             </a>
             <a href="https://xandr215.github.io" class="mainSiteLink">
-                <img src="favicon-grey.ico" alt="Main Site Grey" class="greyLogo">
-                <img src="favicon.ico" alt="Main Site" class="colorLogo">
+                <img src="images/favicon-grey.ico" alt="Main Site Grey" class="greyLogo">
+                <img src="images/favicon.ico" alt="Main Site" class="colorLogo">
             </a>
             <a href="https://x215.w3spaces.com" class="w3spacesLink">
-                <img src="w3spaces-grey.png" alt="W3Spaces Grey" class="greyLogo">
-                <img src="w3spaces-green.png" alt="W3Spaces Green" class="colorLogo">
+                <img src="images/w3grey.png" alt="W3Spaces Grey" class="greyLogo">
+                <img src="images/w3spaces.png" alt="W3Spaces" class="colorLogo">
             </a>
         </div>
     </footer>
