--- a/corgi/index.html
+++ b/corgi/index.html
@@ -35,8 +35,8 @@
                 <img src="images/github.png" alt="GitHub" class="colorLogo">
             </a>
             <a href="https://xandr215.github.io" class="mainSiteLink">
-                <img src="images/favicon-grey.ico" alt="Main Site Grey" class="greyLogo">
-                <img src="images/favicon.ico" alt="Main Site" class="colorLogo">
+                <img src="images/circlex-grey.png" alt="Main Site Grey" class="greyLogo">
+                <img src="images/circlex.png" alt="Main Site" class="colorLogo">
             </a>
             <a href="https://x215.w3spaces.com" class="w3spacesLink">
                 <img src="images/w3grey.png" alt="W3Spaces Grey" class="greyLogo">
