--- a/corgi/index.html
+++ b/corgi/index.html
@@ -15,7 +15,7 @@
     <section id="middleSection">
         <h2>About Cora</h2>
         <img src="images/cora_about.png" alt="Cora the Corgi - About Image">
-        <p>Cora is a lovely tri-color corgi who loves to play, cuddle, and explore the outdoors. She brings joy to everyone she meets with her playful antics and adorable smile.</p>
+        <p>Cora is a adorable tri-color corgi who loves playing, cuddling, and people. She brings joy to everyone she meets with her playful antics and adorable smile.</p>
     </section>
 
     <section id="bottomSection">
