--- a/corgi/index.html
+++ b/corgi/index.html
@@ -30,15 +30,19 @@
     <footer>
         <p>Cora's Page - Xandr215's Site</p>
         <div class="footerIcons">
-            <a href="https://github.com/Xandr215" class="githubLink">
+            <a href="https://github.com/Xandr215" class="githubLink" target="_blank">
                 <img src="images/github-grey.png" alt="GitHub Grey" class="greyLogo">
                 <img src="images/github.png" alt="GitHub" class="colorLogo">
             </a>
-            <a href="https://xandr215.github.io" class="mainSiteLink">
+            <a href="https://replit.com" class="replitLink" target="_blank">
+                <img src="images/replit-grey.png" alt="Replit Grey" class="greyLogo">
+                <img src="images/replit.png" alt="Replit" class="colorLogo">
+            </a>
+            <a href="https://xandr215.github.io" class="mainSiteLink" target="_blank">
                 <img src="images/circlex-grey.png" alt="Main Site Grey" class="greyLogo">
                 <img src="images/circlex.png" alt="Main Site" class="colorLogo">
             </a>
-            <a href="https://x215.w3spaces.com" class="w3spacesLink">
+            <a href="https://x215.w3spaces.com" class="w3spacesLink" target="_blank">
                 <img src="images/w3grey.png" alt="W3Spaces Grey" class="greyLogo">
                 <img src="images/w3spaces.png" alt="W3Spaces" class="colorLogo">
             </a>
