--- a/utilities/index.html
+++ b/utilities/index.html
@@ -43,6 +43,7 @@ body {
   <a href="chatgenie">ChatGenie (not mine!)</a>
   <a href="chatcrawl">ChatCrawl</a>
   <a href="partialcalc.html">PartialCalc (not mine!)</a>
+  <a href="https://x215.w3spaces.com">My W3Spaces</a>
 </div>
 
   <body>
