--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Xandr215's Site</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 <style>
 body {
+  background: linear-gradient(to bottom right, #20b2aa, #00ff00);
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  height: 100vh;
+  color: white;
+  font-family: "Ubuntu Mono", Arial, sans-serif;
 }
 
 .topnav {
@@ -38,17 +44,13 @@ body {
 <body>
 
 <div class="topnav">
-  <a href="irc.html">IRC</a>
-  <a href="contact.html">Contact me!</a>
   <a href="games">Games</a>
   <a href="utilities">Utilities</a>
 </div>
 
   <body>
-    <h1 style="font-family: verdana;">Hello, world!</h1>
-    <h2 style="font-family: verdana;">This is Xandr215's GitHub Pages site.</h2>
-    <p style="font-family: verdana;">Feel free to visit the other pages here.</p>
-  <br>
-
+    <h1 style="text-align: center;">Hello, world!</h1>
+    <h2 style="text-align: center;">This is Xandr215's GitHub Pages site.</h2>
+    <p style="text-align: center;">Still under much development</p>
 </body>
 </html>
