--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ body {
 }
 
 .topnav {
+  position: relative;
   overflow: hidden;
   background-color: #333;
 }
@@ -40,16 +41,49 @@ body {
   background-color: #04AA6D;
   color: white;
 }
+
+.topnav-centered a {
+  float: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.topnav-right {
+  float: right;
+}
+
+/* Responsive navigation menu (for mobile devices) */
+@media screen and (max-width: 600px) {
+  .topnav a, .topnav-right {
+    float: none;
+    display: block;
+  }
+  
+  .topnav-centered a {
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: none;
+  }
+}
 </style>
 </head>
 <body>
-
 <div class="topnav">
-  <a href="games">Games</a>
-  <a href="utilities">Utilities</a>
-</div>
+    
+  <div class="topnav-centered">
+    <a href="index.html" class="active">Home</a>
+  </div>
 
-  <body>
+  <a href="games">Games</a>
+  
+  <div class="topnav-right">
+    <a href="utilities">Utilities</a>
+    <a href="about.html">About</a>
+  </div>
+</div>
     <h1 style="text-align: center;">Hello, world!</h1>
     <h2 style="text-align: center;">This is Xandr215's GitHub Pages site.</h2>
     <p style="text-align: center;">Still under much development</p>
