--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
     <title>Xandr215's Site</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -84,8 +84,6 @@ body {
     <a href="about.html">About</a>
   </div>
 </div>
-    <h1 style="text-align: center;">Hello, world!</h1>
-    <h2 style="text-align: center;">This is Xandr215's GitHub Pages site.</h2>
-    <p style="text-align: center;">Still under much development</p>
+    <h1 style="text-align: center;">Xandr215's Site</h1>
 </body>
 </html>
