--- a/games/memory.html
+++ b/games/memory.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memory Game</title>
+    <title>Xandr215's Memory</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <style>
         body {
             display: flex;
             flex-direction: column;
             align-items: center;
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            font-family: "Ubuntu", Arial, sans-serif;
+            background: linear-gradient(to bottom right, #20b2aa, #00ff00);
+            margin: 0;
+            height: 100vh;
         }
 
         h1 {
@@ -80,7 +86,7 @@
     </style>
 </head>
 <body>
-    <h1>Memory Game</h1>
+    <h1>Xandr215's Memory</h1>
     <div id="game-board"></div>
     <button id="new-game-btn">New Game</button>
     <script>
