--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 <style>
 body {
   background: linear-gradient(to bottom right, #20b2aa, #00ff00);
   margin: 0;
   height: 100vh;
   color: white;
-  font-family: "Ubuntu Mono", Arial, sans-serif;
+  font-family: "Ubuntu", Arial, sans-serif;
 }
 
 .topnav {
@@ -68,6 +69,10 @@ body {
     transform: none;
   }
 }
+    h1 {
+        font-family: "Ubuntu", Arial, sans-serif;
+        text-align: center;
+    }
 </style>
 </head>
 <body>
