--- a/utilities/chat.html
+++ b/utilities/chat.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html manifest="util.appcache", lang="en-us">
 <head>
-<title>IRC-HTML</title>
-    <link rel="icon" type="image/x-icon" href="https://xandr215.github.io/images/favicon.ico">
-    <style>
-      body {
-      font-family: verdana;
-      }
-        iframe {
-    display: block;
-    border-style:none;
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+    <title>Xandr215's Site</title>
+    <link rel="icon" type="image/x-icon" href="https://xandr215.github.io/images/favicon.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+<style>
+body {
+  background: linear-gradient(to bottom right, #20b2aa, #00ff00);
+  margin: 0;
+  height: 100vh;
+  color: white;
+  font-family: "Ubuntu", Arial, sans-serif;
 }
+
 .topnav {
+  position: relative;
   overflow: hidden;
   background-color: #333;
 }
@@ -34,22 +42,57 @@
   background-color: #04AA6D;
   color: white;
 }
+
+.topnav-centered a {
+  float: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.topnav-right {
+  float: right;
+}
+
+/* Responsive navigation menu (for mobile devices) */
+@media screen and (max-width: 600px) {
+  .topnav a, .topnav-right {
+    float: none;
+    display: block;
+  }
+  
+  .topnav-centered a {
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: none;
+  }
+}
+    h1 {
+        font-family: "Ubuntu Mono", Arial, sans-serif;
+        text-align: center;
+    }
+    iframe {
+    display: block;
+    border-style: none;
+    text-align: center;
 </style>
 </head>
 <body>
 <div class="topnav">
-  <a href="https://xandr215.github.io">Back home</a>
-  <a href="numtools.html">NumberTools</a>
-  <a href="chatgenie">ChatGenie (not mine!)</a>
-  <a href="chatcrawl">ChatCrawl</a>
-  <a href="partialcalc.html">PartialCalc (not mine!)</a>
-</div>
-<p>Embedded IRC. I'll add more later tbh.</p>
-<p id="demo"></p>
+    
+  <div class="topnav-centered">
+    <a href="https://xandr215.github.io/utilities/index.html" class="active">Utilities</a>
+  </div>
 
-<script>
-var w = window.innerWidth - 10;
-var h = window.innerHeight - (14+(5*2));
-</script>
-    <iframe width="w" height="h" scrolling="no" src="https://widget.mibbit.com/?settings=5ddda0fef14d34db9b50a68b11dc4baf&server=irc.mibbit.net%3A%2B6697&channel=%23xandr215"></iframe>
+  <a href="https://xandr215.github.io/games">Games</a>
+  
+  <div class="topnav-right">
+    <a href="https://xandr215.github.io">Home</a>
+  </div>
+</div>
+<h1>Xandr215's Chat</h1>
+    <iframe width="(100wh - 24)" height="(100vh - 24) scrolling="no" src="https://widget.mibbit.com/?settings=5ddda0fef14d34db9b50a68b11dc4baf&server=irc.mibbit.net%3A%2B6697&channel=%23xandr215"></iframe>
+</body>
 </html>
