--- a/utilities/chat.html
+++ b/utilities/chat.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
-    <title>Xandr215's Site</title>
+    <title>Xandr215's Chat</title>
     <link rel="icon" type="image/x-icon" href="https://xandr215.github.io/images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
