--- a/utilities/numtools.html
+++ b/utilities/numtools.html
@@ -1,7 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html manifest="util.appcache", lang="en-us">
 <head>
-  <title>NumberTools</title>
-  <script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+    <title>Xandr215's Site</title>
+    <link rel="icon" type="image/x-icon" href="https://xandr215.github.io/images/favicon.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <script>
     // Define a function to generate a random number
     function random_number_generator() {
       // Get the range from the input fields
@@ -70,9 +78,86 @@
       }
     }
   </script>
+<style>
+body {
+  background: linear-gradient(to bottom right, #20b2aa, #00ff00);
+  margin: 0;
+  height: 100vh;
+  color: white;
+  font-family: "Ubuntu", Arial, sans-serif;
+}
+
+.topnav {
+  position: relative;
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.topnav-centered a {
+  float: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.topnav-right {
+  float: right;
+}
+
+/* Responsive navigation menu (for mobile devices) */
+@media screen and (max-width: 600px) {
+  .topnav a, .topnav-right {
+    float: none;
+    display: block;
+  }
+  
+  .topnav-centered a {
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: none;
+  }
+}
+    h1 {
+        font-family: "Ubuntu Mono", Arial, sans-serif;
+        text-align: center;
+    }
+</style>
 </head>
 <body>
-  <h1>NumberTools</h1>
+<div class="topnav">
+    
+  <div class="topnav-centered">
+    <a href="https://xandr215.github.io/utilities/index.html" class="active">Utilities</a>
+  </div>
+
+  <a href="https://xandr215.github.io/games">Games</a>
+  
+  <div class="topnav-right">
+    <a href="https://xandr215.github.io">Home</a>
+  </div>
+</div>
+    <h1>Xandr215's NumTools</h1>
   <p>Enter the range for the random number:</p>
   <input type="number" id="lower" placeholder="Lower bound">
   <input type="number" id="upper" placeholder="Upper bound">
